wip: page builder editors

--- a/docs/developer-docs/5.40.x/page-builder/extending/customize-editors.mdx
+++ b/docs/developer-docs/5.40.x/page-builder/extending/customize-editors.mdx
@@ -13,14 +13,16 @@ import pageEditor from "./assets/editors-page-editor.png";
 import blockEditor from "./assets/editors-block-editor.png";
 import dropdownMenuDots from "./assets/editors-page-editor-dropdown-dots.png";
 import dropdownMenu from "./assets/editors-page-editor-dropdown-open.png";
+import discoverElements from "./assets/editors-discover-elements.png";
+import elementProperties from "./assets/editors-element-properties.png";
 
 <CanIUseThis since="5.40.0" />
 
 <WhatYouWillLearn>
 
 - how editors work
-- how to add/remove/replace existing widgets
-- how to customize widget layouts
+- how to add/remove/replace existing elements
+- how to customize element layouts
 
 </WhatYouWillLearn>
 
@@ -35,9 +37,9 @@ Webiny Page Builder app provides different editors for various purposes. There's
 
 ## Base Editor
 
-All editors share the same base editor, with the core mechanics, plugins, and UI widgets already in place. Individual editor configs add the specifics: variations of widgets, settings, behavior.
+All editors share the same base editor, with the core mechanics, plugins, and UI elements already in place. Individual editor configs add the specifics: variations of elements, settings, behavior.
 
-Out of the box, the base editor has 4 top-level widgets: `TopBar`, `Toolbar`, `Content`, and `Sidebar`. Furthermore, within these top-level widgets, there are groups of child widgets, which allow you to target specific positions when adding new widgets. For example, the display mode selector (laptop, tablet, mobile) you see on the image below, belongs to the `center` group of the `TopBar` widget. We'll cover each top-level widget in depth, in the following sections.
+Out of the box, the base editor has 4 top-level UI elements: `TopBar`, `Toolbar`, `Content`, and `Sidebar`. Furthermore, within these top-level elements, there are groups of child elements, which allow you to target specific positions when adding new elements. For example, the display mode selector (laptop, tablet, mobile) you see on the image below, belongs to the `center` group of the `TopBar` element. We'll cover each top-level element in depth, in the following sections.
 
 <Image src={baseEditor} title={"Base Editor"} />
 
@@ -67,11 +69,11 @@ export const App: React.FC = () => {
 
 In the following sections, we'll only be showing the code that is related to the configuration itself. The rest of the code shown above will be omitted.
 
-## Discover Widgets
+## Discover UI Elements
 
-In the code examples, we'll be referring to existing widgets by their name.
+In the code examples, we'll be referring to existing elements by their name. The most reliable way of discovering the element names and groups is by using your browser's developer tools, and simply inspecting the element you're interested in. Element groups are enclosed with a `pb-editor-ui-elements` DOM element, and individual elements with a `pb-editor-ui-element` DOM element. On these DOM elements, you'll be able to find the `data-group` and `data-name` attributes. That's what you're looking for.
 
-TODO: add screenshot from dev tools showing custom DOM elements `pb-editor-widgets`, and `pb-editor-widget`
+<Image src={discoverElements} title="Discover Elements via Developer Tools" />
 
 ## Choosing an Editor to Customize
 
@@ -90,72 +92,72 @@ import { PageEditorConfig } from "@webiny/app-page-builder";
 
 In this article, we will focus on the Page Editor, as it's usually the main editor developers want to customize. However, all the techniques and patterns shown the examples below apply to all editors.
 
-## TopBar Widget
+## TopBar
 
-The top-level `TopBar` widget has 3 widget groups: `left`, `center`, and `actions`.
+The top-level `TopBar` element has 3 element groups: `left`, `center`, and `actions`.
 
-### Add a Widget
+### Add an Element
 
-To add a new widget, access the `TopBar` config component, and mount a `TopBar.Widget` element, specifying a `name` of your widget, a `group` it belongs to, and an `element`, which is a React element.
+To add a new element, use the `Ui.TopBar.Element` config component, give it a `name`, a `group` it belongs to, and an `element`, which is a React element.
 
 ```tsx
-const { TopBar } = PageEditorConfig;
+const { Ui } = PageEditorConfig;
 
 <PageEditorConfig>
-  <TopBar.Widget name={"demoWidget"} group={"left"} element={<span>Demo Widget</span>} />
+  <Ui.TopBar.Element name={"demoElement"} group={"left"} element={<span>Demo Element</span>} />
 </PageEditorConfig>;
 ```
 
-### Position a Widget
+### Position an Element
 
-To position a widget before or after another widget, use the `before` or `after` props to specify the name of the existing widget.
+To position a element before or after another element, use the `before` or `after` props to specify the name of the existing element.
 
 ```tsx
-const { TopBar } = PageEditorConfig;
+const { Ui } = PageEditorConfig;
 
 <PageEditorConfig>
-  {/* Position a new widget after the "buttonBack" widget. */}
-  <TopBar.Widget
-    name={"demoWidget"}
+  {/* Position a new element after the "buttonBack" element. */}
+  <Ui.TopBar.Element
+    name={"demoElement"}
     group={"left"}
-    element={<span>Demo Widget</span>}
+    element={<span>Demo Element</span>}
     after={"buttonBack"}
   />
-  {/* Change the position of an existing widget. */}
-  <TopBar.Widget name={"buttonBack"} after={"title"} />
+  {/* Change the position of an existing element. */}
+  <Ui.TopBar.Element name={"buttonBack"} after={"title"} />
 </PageEditorConfig>;
 ```
 
-### Remove a Widget
+### Remove an Element
 
-To remove an existing widget, reference it by `name`, and add a `remove` prop.
+To remove an existing element, reference it by `name`, and add a `remove` prop.
 
 ```tsx
-const { TopBar } = PageEditorConfig;
+const { Ui } = PageEditorConfig;
 
 <PageEditorConfig>
-  <TopBar.Widget name={"buttonBack"} remove />
+  <Ui.TopBar.Element name={"buttonBack"} remove />
 </PageEditorConfig>;
 ```
 
-### Replace a Widget
+### Replace an Element
 
-To replace an existing widget, reference the existing widget by name, and specify a different `element` prop.
+To replace an existing element, reference the existing element by name, and specify a different `element` prop.
 
 ```tsx
-const { TopBar } = PageEditorConfig;
+const { Ui } = PageEditorConfig;
 
 <PageEditorConfig>
-  <TopBar.Widget name={"buttonBack"} element={<span>Back button</span>} />
+  <Ui.TopBar.Element name={"buttonBack"} element={<span>Back button</span>} />
 </PageEditorConfig>;
 ```
 
-### Generic Actions
+### Actions
 
-The `actions` widget group is one of the most commonly customized, so we provided several higher level components to make adding actions even easier, comparing to other generic widgets.
+The `actions` element group is one of the most commonly customized, so we provided several higher level components to make adding actions even easier, comparing to other generic elements.
 
 ```tsx
-const { TopBar } = PageEditorConfig;
+const { Ui } = PageEditorConfig;
 
 // Define a component that will handle your action logic.
 const MySettings = () => {
@@ -167,7 +169,7 @@ const MySettings = () => {
 };
 
 <PageEditorConfig>
-  <TopBar.Action name={"mySettings"} element={<MySettings />} />
+  <Ui.TopBar.Action name={"mySettings"} element={<MySettings />} />
 </PageEditorConfig>;
 ```
 
@@ -180,7 +182,7 @@ Note that all the same props are supported on the `TopBar.Action` config compone
 
 ### Dropdown Actions
 
-Page Editor provides one extra menu for secondary actions, which is not present in other editors.
+For actions that you don't use often, or don't need to be visible in the `TopBar`, you can use the built-in `DropdownActions` menu.
 
 <Gallery>
   <Image src={dropdownMenuDots} title="Secondary Actions" />
@@ -193,7 +195,7 @@ To register a dropdown menu action, use the `TopBar.DropdownAction` config compo
 // Import an icon to use in the menu item.
 import { ReactComponent as EditIcon } from "@material-design-icons/svg/round/edit.svg";
 
-const { TopBar } = PageEditorConfig;
+const { Ui } = PageEditorConfig;
 
 const MyDropdownAction = () => {
   const myAction = () => {
@@ -201,11 +203,49 @@ const MyDropdownAction = () => {
   };
 
   return (
-    <TopBar.DropdownAction.MenuItem label={"My Action"} onClick={myAction} icon={<EditIcon />} />
+    <Ui.TopBar.DropdownAction.MenuItem label={"My Action"} onClick={myAction} icon={<EditIcon />} />
   );
 };
 
 <PageEditorConfig>
-  <TopBar.DropdownAction name={"myDropdownAction"} element={<MyDropdownAction />} />
+  <Ui.TopBar.DropdownAction name={"myDropdownAction"} element={<MyDropdownAction />} />
+</PageEditorConfig>;
+```
+
+## Element Properties
+
+Every content element, like paragraph, heading, image, button, etc., has its own set of properties that can be tweaked by the content creators. These properties are rendered within the top-level `Sidebar` element, and are grouped into `style` and `element` groups, represented by **Style** and **Element** tabs, respectively.
+
+<Image src={elementProperties} title="Element Properties" />
+
+The plugins used to register these properties are [pb-editor-page-element-style-settings](/docs/{version}/page-builder/references/plugins#pb-editor-page-element-style-settings) for the `style` group, and [pb-editor-page-element-advanced-settings](/docs/{version}/page-builder/references/plugins#pb-editor-page-element-advanced-settings) for the `element` group.
+
+To see the implementation of the built-in element property plugins, please [refer to our Github](https://github.com/webiny/webiny-js/tree/next/packages/app-page-builder/src/editor/plugins/elementSettings).
+
+### Add a Property
+
+To add a new property, use the `ElementProperty` config component, give it a `name`, a `group` (use the constants defined on the `ElementProperty` component), and an `element` to render the property UI.
+
+```tsx
+const { ElementProperty } = PageEditorConfig;
+
+const MyProperty = () => {
+  return <button>My Custom Property</button>;
+};
+
+<PageEditorConfig>
+  <ElementProperty name={"myProperty"} group={ElementProperty.STYLE} element={<MyProperty />} />
+</PageEditorConfig>;
+```
+
+### Remove a Property
+
+To remove an element property, use the `ElementProperty` config component, and add a `remove` prop.
+
+```tsx
+const { ElementProperty } = PageEditorConfig;
+
+<PageEditorConfig>
+  <ElementProperty name={"background"} remove />
 </PageEditorConfig>;
 ```
