docs: added example code references for Private Model

--- a/docs/developer-docs/5.39.x/headless-cms/extending/private-models.mdx
+++ b/docs/developer-docs/5.39.x/headless-cms/extending/private-models.mdx
@@ -195,7 +195,7 @@ export class BooksCrud implements IBooksCrud {
     }
 }
 
-/*
+/**
  * You also add lifecycle event and permission checks here.:
  * - add lifecycle events (optional)
  * - add permission checks (optional)
@@ -321,6 +321,7 @@ interface CreateBookInput {
     price: number;
 }
 
+
 export const booksGraphql = new GraphQLSchemaPlugin<Context>({
     typeDefs: /* GraphQL */ `
         extend type Query {
@@ -361,8 +362,7 @@ export const booksGraphql = new GraphQLSchemaPlugin<Context>({
             listBooks(
                 limit: Int
                 search: String
-                after: String
-            ): BooksListResponse
+                after: String): BooksListResponse
         }
 
         extend type Mutation {
@@ -389,7 +389,7 @@ export const booksGraphql = new GraphQLSchemaPlugin<Context>({
             async listBooks(_, args, context) {
                 try {
                     const { limit, after, search } = args as BooksStorageOperationsListParams;
-                    const [books, meta] = await context.books.listBooks({ limit, after, search });
+                    const [books, meta] = await context.books.listBooks({ limit, after, search })
                     return new ListResponse(books, meta);
                 } catch (err) {
                     return new ErrorResponse(err);
@@ -549,7 +549,9 @@ query listBook {
 
 ## Next Steps
 
-For detailed code examples and further exploration, please refer to the attached video.
+### Video Reference
+For more code examples, references and further exploration, please refer to the attached video.
 <YouTube id="iKeew6xvUb8" />
 
-
+### Example Code References
+If you're looking for code references on private models, as mentioned earlier in Webiny, we used private models in various apps like [File Manager](https://github.com/webiny/webiny-js/blob/next/packages/api-file-manager/src/cmsFileStorage/file.model.ts), [Advanced Content Organization](https://github.com/webiny/webiny-js/blob/next/packages/api-aco/src/filter/filter.model.ts), [Advanced Publishing Workflow](https://github.com/webiny/webiny-js/blob/next/packages/api-apw/src/storageOperations/models/reviewer.model.ts), etc. You can have a look into the codebase for more details on how we used them.
