--- a/docs/developer-docs/5.39.x/headless-cms/extending/private-models.mdx
+++ b/docs/developer-docs/5.39.x/headless-cms/extending/private-models.mdx
@@ -10,7 +10,7 @@ import apiPlayground from "./assets/private-model-api-playground.png";
 
 <Alert type="info" title="Can I Use This?">
 
-This feature is available since Webiny **v5.39.2**.
+- This feature is available since Webiny **v5.39.2**.
 
 </Alert>
 
@@ -18,6 +18,7 @@ This feature is available since Webiny **v5.39.2**.
 
 - what is private model
 - how to create a private model
+- how to implement CRUD operations for a private model
 
 </Alert>
 
@@ -45,6 +46,12 @@ In Webiny, we used private models in various apps. Notable examples include the 
 ## Building a Private `Book` Model
 Let's walk through the process of building a private model, taking the `Book` model with `title` and `price` fields as an example.
 We will also implement to create book and list books operations on this model.
+
+<Alert type="info">
+
+The code that we cover in this tutorial can also be found in our [GitHub examples repository](https://github.com/webiny/webiny-examples/tree/master/headless-cms/private-model/5.39.0).
+
+</Alert>
 
 ### Step 1: Create a Book App
 We will start by creating a Book App, which is a collection of various plugins needed for Private models.
@@ -505,6 +512,12 @@ export default [
 ```
 yarn webiny deploy apps/api --env dev
 ```
+
+<Alert type="info">
+
+Use the [`webiny watch`](/docs/{version}/core-development-concepts/basics/watch-command) command to continuously deploy application code changes into the cloud and instantly see them in action.
+
+</Alert>
 
 ### Step 9: Testing
 Once the application is deployed, you will be able to see Query and Mutation related to the Book model.
