docs: fixed typo

--- a/docs/developer-docs/5.39.x/headless-cms/extending/private-models.mdx
+++ b/docs/developer-docs/5.39.x/headless-cms/extending/private-models.mdx
@@ -45,7 +45,7 @@ In Webiny, we used private models in various apps. Notable examples include the 
 
 ## Building a Private `Book` Model
 Let's walk through the process of building a private model, taking the `Book` model with `title` and `price` fields as an example.
-We will also implement to create book and list books operations on this model.
+We will also implement create book and list books operations on this model.
 
 <Alert type="info">
 
