docs: update the steps to create Access Key for Webiny CLI user as per the new AWS user interface

--- a/docs/developer-docs/5.28.x/infrastructure/aws/configure-aws-credentials.mdx
+++ b/docs/developer-docs/5.28.x/infrastructure/aws/configure-aws-credentials.mdx
@@ -55,11 +55,11 @@ Click on **IAM** and select **Users** under **Access Management**:
 
 ![aws-iam-users](./assets/configure-aws-credentials/aws-iam-users.png)
 
-Click on **Add user** to create the account with the IAM credentials:
+Click on **Create user** to create the account with the IAM credentials:
 
 ![aws-create-user](./assets/configure-aws-credentials/aws-create-user.png)
 
-Here you enter a 5-step process, and the first step is to create a **User name** for the credentials.
+Here you enter a multi-step process, and the first step is to create a **User name** for the credentials.
 
 <Alert type="warning" title="Programmatic access">
 
@@ -69,7 +69,7 @@ Make sure to select the **Programmatic access** checkbox before moving to the ne
 
 ![aws-user-details](./assets/configure-aws-credentials/aws-user-details.png)
 
-In the next step you define the access level for the new user. Select **Attach existing Policies** from the three options that are available. Then select the **AdministratorAccess** policy by marking the checkbox next to it. When ready, click the **Next:Tags** button:
+In the next step, you define the access level for the new user. Select **Attach existing Policies** from the three options available. Then, choose the **AdministratorAccess** policy by checking the checkbox next to it. When you're ready, click the **Next** button.
 
 <Alert type="warning" title="Need a more secure deployment option?">
 
@@ -80,23 +80,38 @@ please see the ["Deploy Webiny Project" AWS CloudFormation Template](#deploy-web
 
 ![aws-user-permissions](./assets/configure-aws-credentials/aws-user-permissions.png)
 
-In case you don't want to add any tags to your new user, you can just skip this step and click the **Next:Review** button.
+Once all the steps are complete, you'll reach the **Review and create** page, which should look similar to image below. If everything is correct, click the **Create user** button.  
 
-![aws-user-tags](./assets/configure-aws-credentials/aws-user-tags.png)
-
-After all the steps are complete, you'll see a **Review** page. It should look something similar to this. If everything is correct, click the **Create user** button.
+You can also add tags to new users. If you don't want to add any tags to your new user, you can simply click the **Create user** button.
 
 ![aws-user-review](./assets/configure-aws-credentials/aws-user-review.png)
 
-Lastly, you will receive a success message with your **Access key ID** and **Secret access key**. You need to copy these strings and keep them safe as you need them for the next step.
+Once the user is created, you will receive a success message: "User created successfully." Now, we will proceed to create the **Access key** for this new user.
+
+![aws-new-user-created-successfully](./assets/configure-aws-credentials/aws-new-user-created-successfully.png)
+
+Click on the newly created user from the Users home page. This will display the user details page. Next, click on the **Create access key** link.
+
+![access-key-creation](./assets/configure-aws-credentials/access-key-step-1.png)
+
+Select the **Command Line Interface (CLI)** option, and check the `I understand the above recommendation and want to proceed to create an access key` confirmation box at the end. Then, click the **Next** button.
+
+![access-key-use-case](./assets/configure-aws-credentials/access-key-step-2.png)
+
+The next step is optional, where you can set the description tag. Click the **Create access key** button.
+
+![set-description-tag](./assets/configure-aws-credentials/access-key-step-3.png)
+
+On successful creation of the Access key, you will see a message: **Access key created**.  
+This is the only time that the secret access key can be viewed or downloaded. You cannot recover it later. However, you can create a new access key any time. Copy this *Access key* and **Secret access key**.
+
+![access-key-created-successfully](./assets/configure-aws-credentials/access-key-step-4.png)
 
 <Alert type="warning" title="Save the credentials">
 
 Once you navigate off this screen, you will not be able to see the credentials any more. If you lose them, you will need to delete the user and create a new one.
 
 </Alert>
-
-![aws-user-created](./assets/configure-aws-credentials/aws-user-created.png)
 
 ### "Deploy Webiny Project" AWS CloudFormation Template
 
