feat: create 5.39.4 release notes

--- a/docs/developer-docs/5.38.x/enterprise/aacl/folder-level-permissions.mdx
+++ b/docs/developer-docs/5.38.x/enterprise/aacl/folder-level-permissions.mdx
@@ -83,3 +83,9 @@ A workaround for this is to create a new folder, and then move all the content f
 Folder Level Permissions feature is an extension of the existing [security layer](/docs/{version}/enterprise/aacl/introduction#the-three-tiers-of-webiny-s-security-layer). It does not replace it.
 
 This means that existing security roles and security teams are still the first thing that is checked when a user tries to access a resource. For example, if user's security role doesn't grant access to Page Builder, then the user will not be able to access Page Builder, even if they have permissions assigned to a folder in Page Builder.
+
+### Can I Use Folder Level Permissions with API Tokens?
+
+At the moment, the answer is no. API tokens are not subject to folder level permissions. They will always have access to all folders.
+
+
