--- a/docs/release-notes/5.39.4/changelog.mdx
+++ b/docs/release-notes/5.39.4/changelog.mdx
@@ -1,5 +1,5 @@
 ---
-id: 2302de50
+id: 25335576
 title: Webiny 5.39.4 Changelog
 description: See what's new in Webiny version 5.39.4.
 ---
@@ -10,6 +10,27 @@ import { GithubRelease } from "@/components/GithubRelease";
 
 ## Page Builder
 
+### Addressed Website Routing Issue ([#4083](https://github.com/webiny/webiny-js/pull/4083))
+
+With the [5.39.0 release](/docs/release-notes/5.39.0/changelog), a regression was introduced that caused the Website routing in multi-tenant projects to not work as expected. 
+
+This issue has now been addressed, and the Website routing in multi-tenant projects should now work as expected. 
+
 ### Image Page Element - Improved SVG Support ([#4041](https://github.com/webiny/webiny-js/pull/4041))
 
 ✍️
+
+## Folder Level Permissions (FLP)
+
+### API Token Access Issue ([#4082](https://github.com/webiny/webiny-js/pull/4082))
+
+Prior to this release, in case [folder level permissions](/docs/enterprise/aacl/folder-level-permissions) were assigned on a folder, accessing content within it using an API token as a way of authenticating would no longer work. The user would simply start receiving `NOT_AUTHORIZED` errors, and the only way to again access the content would be to remove the assigned folder level permissions.
+
+This issue has now been addressed. When accessing content in a folder that has folder level permissions assigned to it, using an API token as a way of authenticating will work as expected. 
+
+<Alert type="info">
+
+  With this issue now resolved, also note that API tokens are not subject to folder level permissions, and they will always have access to all content. We've updated the FAQ section of the existing [Folder Level Permissions](/docs/enterprise/aacl/folder-level-permissions#can-i-use-folder-level-permissions-with-api-tokens) article to reflect this.
+
+</Alert>
+
